# table-tennis-game-annotator

./: .clang-format  .gitignore  .parcelrc  CMakeLists.txt  LICENSE  README.md  app.py  ball_markup.json  convert_ball_annotation_format_to_yolov5.py  convert_to_vgg_annotation_format.py  events_markup.json  extract_ball_images.py  extract_segmentation_masks.py  model_abstractions.py  os_switcher.py  package-lock.json  package.json  parabola_manipulation.py  pyproject.toml  tailwind.config.js  use_ball_detection_model.py  view_game_data.py
data_processing/: convert_ball_annotation_format_to_yolov5.py  convert_to_vgg_annotation_format.py  draw_vgg_annotations.py  extract_ball_images.py  extract_segmentation_masks.py  merge_vgg_annotation_files.py  view_game_data.py
src/: globals.cpp  globals.hpp  yolov5.cpp  yolov5.hpp  yolov5ncnn.cpp
static/: main.js  parabola-manipulation.js  parabola_manipulation.js  utils.js  wasm-feature-detect.js
templates/: home.html
webassembly/: README.md
